--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express-jwt": "^6.0.0",
     "express-router": "0.0.1",
     "express-validator": "5.3.1",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.19",
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
