Added Dockerignore. Project ready for deployent

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://iato99:iato99@cluster0.xvyqf.mongodb.net/nodeapi?retryWrites=true&w=majority
+CLIENT_URL=http://localhost:3000
 JWT_SECRET=KHKDLSAHFLK092859340JKHFDSLKHJ
 PORT=8080
