--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.19",
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "uuidv1": "^1.6.14"
   }
